--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="ja">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="ランダムに文字列を生成(Vite + React + TS)" />
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/vite.svg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Vite + tsx + sassでランダムに文字列を生成">
     <title>ランダム文字列生成</title>
+    <meta property="" content="website">
+    <meta property="og:title" content="ランダム文字列生成">
+    <meta property="og:image" content="/vite.svg">
+    <meta property="og:description" content="Vite + tsx + sassでランダムに文字列を生成">
   </head>
   <body>
     <div id="root"></div>
