--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Vite + tsx + sassでランダムに文字列を生成">
     <title>ランダム文字列生成</title>
-    <meta property="" content="website">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="ランダム文字列生成">
-    <meta property="og:image" content="/vite.svg">
+    <meta property="og:image" content="./vite.svg">
     <meta property="og:description" content="Vite + tsx + sassでランダムに文字列を生成">
   </head>
   <body>
